Convert genotyping actions
SVN r62412 |2019-02-13 19:05:55 +0000